Updated contact info
Updated contact info

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -439,6 +439,13 @@
 							<!--  List one -->
 							<ul class="flex fixedSpaces later left margin-bottom-5">
 								<li class="col-3-12">
+									<h3 class="common-BodyTitle">Björn Selling</h3>
+									<p class="common-BodyText">Affärschef</p>
+									<a href="mailto:bjorn@besiktningsman.se">
+										<p class="common-Link">bjorn@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
 									<h3 class="common-BodyTitle">Magnus Janson</h3>
 									<p class="common-BodyText">VD & styrelseordförande</p>
 									<a href="mailto:magnus.janson@besiktningsman.se">
@@ -453,13 +460,6 @@
 									</a>
 								</li>
 								<li class="col-3-12">
-									<h3 class="common-BodyTitle">Björn Selling</h3>
-									<p class="common-BodyText">Affärschef</p>
-									<a href="mailto:bjorn@besiktningsman.se">
-										<p class="common-Link">bjorn@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
 									<h3 class="common-BodyTitle">Martin Viberg</h3>
 									<p class="common-BodyText">Besiktningschef</p>
 									<a href="mailto:martin@besiktningsman.se">
@@ -471,17 +471,10 @@
 							<h2 class="common-IntroText">Projektavdelning</h2>
 							<ul class="flex fixedSpaces later left margin-bottom-5">
 								<li class="col-3-12">
-									<h3>Nalle Gellermark</h3>
-									<p class="common-BodyText">Projektansvarig Privatpersoner</p>
-									<a href="mailto:nalle@besiktningsman.se">
-										<p class="common-Link">nalle@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Madeleine Pettersson</h3>
-									<p class="common-BodyText">Projektassistent</p>
-									<a href="mailto:madde@besiktningsman.se">
-										<p class="common-Link">madde@besiktningsman.se</p>
+									<h3>Linnea Ståhl</h3>
+									<p class="common-BodyText">Projektansvarig</p>
+									<a href="mailto:linnea.stahl@besiktningsman.se">
+										<p class="common-Link">linnea.stahl@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
@@ -491,36 +484,75 @@
 										<p class="common-Link">mia.tapper@besiktningsman.se</p>
 									</a>
 								</li>
+								<li class="col-3-12">
+									<h3>Pernilla Midell</h3>
+									<p class="common-BodyText">Projektansvarig</p>
+									<a href="mailto:pernilla.midell@besiktningsman.se">
+										<p class="common-Link">pernilla.midell@besiktningsman.se</p>
+									</a>
+								</li>
+							</ul>
+							<!--  Sales / Marketing -->
+							<h2 class="common-IntroText">Sälj & Marknad</h2>
+							<ul class="flex fixedSpaces later left margin-bottom-5">
+								<li class="col-3-12">
+									<h3>Kenneth Helenius</h3>
+									<p class="common-BodyText">Säljansvarig</p>
+									<a href="mailto:kenneth.helenius@besiktningsman.se">
+										<p class="common-Link">kenneth.helenius@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Maximilian Rostov</h3>
+									<p class="common-BodyText">Marknadsansvarig</p>
+									<a href="mailto:max.rostov@besiktningsman.se">
+										<p class="common-Link">max.rostov@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Yones Sadaghiani</h3>
+									<p class="common-BodyText">Säljchef</p>
+									<a href="mailto:yones@besiktningsman.se">
+										<p class="common-Link">yones@besiktningsman.se</p>
+									</a>
+								</li>
 							</ul>
 							<!--  inspectors -->
 							<h2 class="common-IntroText">Besiktningsmän</h2>
 							<ul class="flex fixedSpaces later left margin-bottom-5">
 								<li class="col-3-12">
-									<h3>Olof Johansson</h3>
+									<h3>Andre Hamzo</h3>
 									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:olof@besiktningsman.se">
-										<p class="common-Link">olof@besiktningsman.se</p>
+									<a href="mailto:andre.hamzo@besiktningsman.se">
+										<p class="common-Link">andre.hamzo@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
-									<h3>Mathias Wussow</h3>
+									<h3>Anders Holmström</h3>
 									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:mathias@besiktningsman.se">
-										<p class="common-Link">mathias@besiktningsman.se</p>
+									<a href="mailto:anders.holmstrom@besiktningsman.se">
+										<p class="common-Link">anders.holmstrom@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
-									<h3>Tom Maurell</h3>
+									<h3>Carl Gistrand</h3>
 									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:tom.maurell@besiktningsman.se">
-										<p class="common-Link">tom.maurell@besiktningsman.se</p>
+									<a href="mailto:carl.gistrand@besiktningsman.se">
+										<p class="common-Link">carl.gistrand@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
-									<h3>John Eriksson</h3>
+									<h3>Charlie Höglund</h3>
 									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:john.eriksson@besiktningsman.se">
-										<p class="common-Link">john.eriksson@besiktningsman.se</p>
+									<a href="mailto:charlie.hoglund@besiktningsman.se">
+										<p class="common-Link">charlie.hoglund@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>David Collin</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:david.collin@projektsopsug.se">
+										<p class="common-Link">david.collin@projektsopsug.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
@@ -531,10 +563,38 @@
 									</a>
 								</li>
 								<li class="col-3-12">
+									<h3>Dan Jakobsson</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:dan@besiktningsman.se">
+										<p class="common-Link">dan@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
 									<h3>Fredrik Lundgren</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:fredrik.lundgren@besiktningsman.se">
 										<p class="common-Link">fredrik.lundgren@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Göran Svensson</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:goran@besiktningsman.se">
+										<p class="common-Link">goran@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Heval Remazan</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:heval.remazan@besiktningsman.se">
+										<p class="common-Link">heval.remazan@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Jeanette Immo</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:jeanette@besiktningsman.se">
+										<p class="common-Link">jeanette@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
@@ -552,80 +612,10 @@
 									</a>
 								</li>
 								<li class="col-3-12">
-									<h3>Magnus Engström</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:magnus.engstrom@besiktningsman.se">
-										<p class="common-Link">magnus.engstrom@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
 									<h3>Lasse Grandahl</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:lasse@besiktningsman.se">
 										<p class="common-Link">lasse@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Örjan Höglund</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:orjan@besiktningsman.se">
-										<p class="common-Link">orjan@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Charlie Höglund</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:charlie.hoglund@besiktningsman.se">
-										<p class="common-Link">charlie.hoglund@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Jeanette Immo</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:jeanette@besiktningsman.se">
-										<p class="common-Link">jeanette@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Dan Jakobsson</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:dan@besiktningsman.se">
-										<p class="common-Link">dan@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Ulf Johansson</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:ulf@besiktningsman.se">
-										<p class="common-Link">ulf@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Robert Lindbom</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:robert@besiktningsman.se">
-										<p class="common-Link">robert@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Göran Svensson</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:goran@besiktningsman.se">
-										<p class="common-Link">goran@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Margareta Telkert</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:margareta@besiktningsman.se">
-										<p class="common-Link">margareta@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
-									<h3>Jim Löfgren</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:jim@besiktningsman.se">
-										<p class="common-Link">jim@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
@@ -636,6 +626,27 @@
 									</a>
 								</li>
 								<li class="col-3-12">
+									<h3>Mathias Wussow</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:mathias@besiktningsman.se">
+										<p class="common-Link">mathias@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Magnus Engström</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:magnus.engstrom@besiktningsman.se">
+										<p class="common-Link">magnus.engstrom@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Mikael Sättberger</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:mikael.sattberger@besiktningsman.se">
+										<p class="common-Link">mikael.sattberger@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
 									<h3>Michael Stenman</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:michael.stenman@besiktningsman.se">
@@ -643,10 +654,24 @@
 									</a>
 								</li>
 								<li class="col-3-12">
-									<h3>Niklas Josefsson</h3>
+									<h3>Mats-Erik Hybinette</h3>
 									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:niklas.josefsson@besiktningsman.se">
-										<p class="common-Link">niklas.josefsson@besiktningsman.se</p>
+									<a href="mailto:mats-erik@besiktningsman.se">
+										<p class="common-Link">mats-erik@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Mats Forslund</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:mats.forslund@besiktningsman.se">
+										<p class="common-Link">mats.forslund@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Olof Johansson</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:olof@besiktningsman.se">
+										<p class="common-Link">olof@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
@@ -654,6 +679,20 @@
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:olof.andersson@besiktningsman.se">
 										<p class="common-Link">olof.andersson@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Patrik Svensson</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:patrik.svensson@besiktningsman.se">
+										<p class="common-Link">patrik.svensson@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Robert Lindbom</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:robert@besiktningsman.se">
+										<p class="common-Link">robert@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
@@ -685,6 +724,20 @@
 									</a>
 								</li>
 								<li class="col-3-12">
+									<h3>Tom Maurell</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:tom.maurell@besiktningsman.se">
+										<p class="common-Link">tom.maurell@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
+									<h3>Thomas Karlsson</h3>
+									<p class="common-BodyText">Besiktningsman</p>
+									<a href="mailto:thomas.karlsson@besiktningsman.se">
+										<p class="common-Link">thomas.karlsson@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
 									<h3>Ulf Johansson</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:ulf@besiktningsman.se">
@@ -692,10 +745,10 @@
 									</a>
 								</li>
 								<li class="col-3-12">
-									<h3>Patrik Svensson</h3>
+									<h3>Örjan Höglund</h3>
 									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:patrik.svensson@besiktningsman.se">
-										<p class="common-Link">patrik.svensson@besiktningsman.se</p>
+									<a href="mailto:orjan@besiktningsman.se">
+										<p class="common-Link">orjan@besiktningsman.se</p>
 									</a>
 								</li>
 							</ul>
