--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -264,6 +264,7 @@
 			<!-- newsflow list / latest first -->
 			<div class="list">
 				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6689412153436336128" height="765" width="504" frameborder="0" allowfullscreen="" title="Besiktningsman.se på Linkedin"></iframe>
 					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6547436975216037888" height="522" width="515" frameborder="0" allowfullscreen="" title="Besiktningsman.se på Linkedin"></iframe>
 				</span>
 				<hr>
