--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -262,10 +262,10 @@
 				Händelser
 			</h2>
 			<!-- newsflow list / latest first -->
-			<div class="list">
+			<div class="list news-list-scrollable">
 				<span>
-					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6689412153436336128" height="765" width="504" frameborder="0" allowfullscreen="" title="Besiktningsman.se på Linkedin"></iframe>
-					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6547436975216037888" height="522" width="515" frameborder="0" allowfullscreen="" title="Besiktningsman.se på Linkedin"></iframe>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6689412153436336128" height="765" width="504" frameborder="0" allowfullscreen="" title="Besiktningsman.se på Linkedin" target="_blank"></iframe>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6547436975216037888" height="765" width="504" frameborder="0" allowfullscreen="" title="Besiktningsman.se på Linkedin" target="_blank"></iframe>
 				</span>
 				<hr>
 				<span class="typeform-share common-BodyTitle">
@@ -274,7 +274,7 @@
 						Har du något eller några års erfarenhet från byggbranschen och vill ta nästa steg i karriären där du
 						får möjlighet att själv koordinera både större och mindre besiktningsprojekt inom bygg- och fastighetsbranschen?
 					</p>
-					<a class="common-Link" href="https://www.besiktningsman.se/karriar/" data-mode="1" target="_blank">
+					<a class="common-Link" href="https://www.besiktningsman.se/karriar/" data-mode="1" target="_blank"></a>
 						<p>Ansök här</p>
 					</a>
 				</span>
