--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -264,10 +264,19 @@
 			<!-- newsflow list / latest first -->
 			<div class="list">
 				<span>
-					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6689412153436336128" height="100%" width="100%" frameborder="0" allowfullscreen="" title="Besiktningsman.se på Linkedin" target="_blank"></iframe>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6689891235408228352" height="1000px" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
 				</span>
 				<span>
-					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6547436975216037888" height="100%" width="100%" frameborder="0" allowfullscreen="" title="Besiktningsman.se på Linkedin" target="_blank"></iframe>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6689412153436336128" height="1000px" width="100%" frameborder="0" allowfullscreen="" title="Besiktningsman.se på Linkedin" target="_blank"></iframe>
+				</span>
+				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6688360323684040704" height="900px" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
+				</span>
+				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6682205341905666048" height="900px" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
+				</span>
+				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6547436975216037888" height="900px" width="100%" frameborder="0" allowfullscreen="" title="Besiktningsman.se på Linkedin" target="_blank"></iframe>
 				</span>
 				<hr>
 				<span class="common-BodyTitle">
