--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -264,6 +264,9 @@
 			<!-- newsflow list / latest first -->
 			<div class="list">
 				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6691386185647984640" height="1000px" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
+				</span>
+				<span>
 					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6689891235408228352" height="1000px" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
 				</span>
 				<span>
