--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -264,6 +264,9 @@
 			<!-- newsflow list / latest first -->
 			<div class="list">
 				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6710106467954917376" height="900" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
+				</span>
+				<span>
 					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6708751822879789057" height="900px" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
 				</span>
 				<span>
