Added margin-bottom in a style tag inside the Div on line 314.

--- a/tjanster/brf/OVK_besiktning/index.html
+++ b/tjanster/brf/OVK_besiktning/index.html
@@ -311,7 +311,7 @@
 	<section class="slide whiteSlide autoHeight">
 		<div class="container">
 			<div class="container-lg">
-				<div class="fix-10-12 margin-top-1">
+				<div class="fix-10-12 margin-top-1" style="margin-bottom: 5%;">
 
 					<div class="col-5-12">
 						<div class="center">
@@ -365,7 +365,7 @@
 		<div class="fix-12-12 center">
 			<h2 class="common-IntroText">När ska du göra OVK-kontroll?</h2>
 		</div>
-	<!-- Time frames to look out for -->
+	<!-- OVK time frames to look out for -->
 	<section class="slide whiteSlide autoHeight" style="background-color: rgba(16, 114, 187, 0.05);">
 			<div class="container-lg" style="display: flex;    padding-top: 40px;
 			padding-bottom: 40px;">
@@ -390,7 +390,7 @@
 				</div>
 			</div>
 	</section>
-	<!-- GB booking -->
+	<!-- OVK booking -->
 	<section class="slide form-section white" data-name="boka" name="boka" data-title="boka" id="boka">
 		<div class="container-lg">
 			<div class="pad formBackground form-column">
