Commented out text about OVK. And added a link instead, that leads to /ovk_besiktning

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="se">
 
@@ -764,6 +765,10 @@
 
 						<!-- övriga tjänster -->
 						<h2 class="common-BodyTitle">Övriga tjänster</h2>
+						<a href="../brf/OVK_besiktning/" class="common-Button text-blue" style="">
+							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
+							OVK - Obligatorisk ventilationskontroll
+						</a>
 						<div class="accordion margin-bottom-3">
 							<h3>KA-Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal.</h3>
 							<div>
@@ -823,7 +828,7 @@
 									</li>
 								</ul>
 							</div>
-							<h3>OVK - Obligratorisk ventilationskontroll</h3>
+							<!-- <h3>OVK - Obligratorisk ventilationskontroll</h3>
 							<div>
 								<ul>
 									<li class="col-5-12">
@@ -883,7 +888,7 @@
 
 									</li>
 								</ul>
-							</div>
+							</div> -->
 							<h3>Fuktbesiktning; utredningar, mögelprovning, skadeutredningar</h3>
 							<div>
 								<ul>
