--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
         </div>
     </nav>
-    <div class='siteHeader-guidesContainer'>
+    <!-- <div class='siteHeader-guidesContainer'>
         <div class='guides siteHeader__guides' aria-hidden='true'>
             <div class='guides-container'>
                 <div class='guides-guide'></div>
@@ -266,7 +266,7 @@
                 <div class='guides-guide'></div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- HEADER -->
     <section class="slide fade autoHeight" data-name="home" id="mainLanding">
         <div class="content">
