--- a/tjanster/brf/OVK_besiktning/index.html
+++ b/tjanster/brf/OVK_besiktning/index.html
@@ -408,13 +408,16 @@
 						<!--[if lte IE 8]>
 <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
 <![endif]-->
-						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
-						<script>
-							hbspt.forms.create({
-								portalId: "4367163",
-								formId: "6c91c530-9bc0-460a-8625-d40ddcd725ed"
-							});
-						</script>
+						<!--[if lte IE 8]>
+<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+<![endif]-->
+					<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+					<script>
+						hbspt.forms.create({
+							portalId: "4367163",
+							formId: "6c91c530-9bc0-460a-8625-d40ddcd725ed"
+						});
+					</script>
 					</div>
 					<footer></footer>
 				</div>
