ovk layout updates

--- a/tjanster/brf/OVK_besiktning/index.html
+++ b/tjanster/brf/OVK_besiktning/index.html
@@ -308,7 +308,7 @@
 		</div>
 	</section>
 	<!-- OVK why -->
-	<section class="slide whiteSlide autoHeight">
+	<section class="slide whiteSlide autoHeight" id="ovkIntro">
 		<div class="container">
 			<div class="container-lg">
 				<div class="fix-10-12 margin-top-1" style="margin-bottom: 5%;">
@@ -362,30 +362,25 @@
 			</div>
 		</div>
 	</section>
-		<div class="fix-12-12 center">
+		<div class="fix-12-12 center margin-top-1">
 			<h2 class="common-IntroText">När ska du göra OVK-kontroll?</h2>
 		</div>
 	<!-- OVK time frames to look out for -->
-	<section class="slide whiteSlide autoHeight" style="background-color: rgba(16, 114, 187, 0.05);">
-			<div class="container-lg" style="display: flex;    padding-top: 40px;
-			padding-bottom: 40px;">
+	<section class="slide whiteSlide autoHeight" id="ovkIntervaller" style="background-color: rgba(16, 114, 187, 0.05);">
+			<div class="container-lg flex-py4">
 				<div class="flex">
-					<div class="col-4-12" style="    border-right: 1px solid #1072bb;
-					border-width: 2px;
-					margin-right: 20px;">
-						<h3 class="common-BodyTitle" style="    font-size: 34px;
-						line-height: 54px;
-						padding-top: 20px;">OVK - Intervaller
+					<div class="col-4-12 common-TitleBorder">
+						<h3 class="common-BodyTitle">OVK - Intervaller
 							att hålla koll på.
 						</h3>
 					</div>
 					<div class="col-4-12">
-						<p class="common-BodyTextSm">Flerbostadshus & kontor (FT, FTX - ventilation): 3 år </p> 
-						<p class="common-BodyTextSm">Flerbostadshus & kontor (F, FX, S - ventilation): 6 år</p>
+						<p class="common-BodyTextSm">Flerbostadshus & kontor (FT, FTX - ventilation): <br> <span>3 år</span></p> 
+						<p class="common-BodyTextSm">Flerbostadshus & kontor (F, FX, S - ventilation): <br> <span>6 år</span></p>
 					</div>
 					<div class="col-4-12">
-						<p class="common-BodyTextSm">Skolor, förskolor & vårdlokaler (Oavsett ventilationssystem): 3år</p>
-						<p class="common-BodyTextSm">En- och tvåbostadshus: Vid nybyggnation/nyinstallation</p>
+						<p class="common-BodyTextSm">Skolor, förskolor & vårdlokaler (Oavsett ventilationssystem): <br><span>3 år</span></p>
+						<p class="common-BodyTextSm">En- och tvåbostadshus: <br> Vid nybyggnation/nyinstallation</p>
 					</div>
 				</div>
 			</div>
@@ -395,7 +390,7 @@
 		<div class="container-lg">
 			<div class="pad formBackground form-column">
 				<h3 class="pad-header margin-0 common-BodyTitle2 center">
-					Redo att boka? Börja med att skicka en offertförfrågan.
+					Redo att boka? <br> Börja med att skicka en offertförfrågan.
 					<p class="common-BodyText margin-0 padding-0">
 						Fyll i informationen nedan
 					</p>
@@ -424,8 +419,8 @@
 			</div>
 			<div class="secondary-column">
 				<div class="customers">
-					<p class="copy-1 common-BodyTitle">Vi är de enda inom branschen som kan leverara felbilagorna
-						digitalt samma dag med besiktningsappen iSpect.</p>
+					<h3 class="copy-1 common-BodyTitle">Vi är de enda inom branschen som kan leverara felbilagorna
+						digitalt samma dag med besiktningsappen iSpect.</h3>
 					<p class="copy-2 common-BodyText">Gör som många andra och anlita Besiktningsman.se</p>
 					<ul class="customer-logos">
 						<li class="customer-logo">
@@ -490,34 +485,39 @@
 						</li>
 					</ul>
 				</div>
-				<div class="fix-10-12 margin-top-1">
-					<div class="center-m-down">
-						<ul class="grid later equal center margin-bottom-3">
-							<li class="col-8-12">
-								<img src="../../../assets/svg/ispect_logo.svg" alt="" style="width: 100px;">
-								<h3 class="common-BodyTitle">100% digitala med iSpect</h3>
-								<p class="fix-4-12 common-BodyText">Med iSpect ser vi till att fel kan förebyggas och
-									att uppkomna fel kan åtgärdas direkt!</p>
-								<span class="common-Link"><a href="../../../ispect/">Läs mer om iSpect</a></span>
-							</li>
-							<li class="col-8-12">
-								<img src="../../../assets/svg/bm_se_checkmark_color.svg" alt=""
-									style="width:130px;margin-left: 80px;margin-bottom: 10px;margin-top: 16px;">
-								<h3 class="common-BodyTitle">Ett opartiskt besiktningsföretag</h3>
-								<p class="fix-4-12 common-BodyText">Vi utför besiktnings- och KA- tjänster objektivt och
-									opartiskt enligt gällande bygg- och branschregler.</p>
-								<span class="common-Link"><a href="../../../om_oss/">Läs mer om oss</a> </span>
-							</li>
-						</ul>
-						<h3>Redo att boka?</h3>
-						<p>Fyll i formuläret så kontaktar vi dig.</p>
-						<a class="common-Button blue text-white" href="#boka">Kontakta mig </a>
-					</div>
-				</div>
+
 
 			</div>
 		</div>
-	</section>
+  </section>
+  <section class="slide whiteSlide autoHeight">
+    <div class="container-lg">
+      <div class="fix-10-12 margin-top-1">
+        <div class="center-m-down">
+          <ul class="grid later equal center margin-bottom-3">
+            <li class="col-8-12">
+              <img src="../../../assets/svg/ispect-logo-solo.svg" alt="" style="width: 100px;">
+              <h3 class="common-BodyTitle">100% digitala med iSpect</h3>
+              <p class="fix-4-12 common-BodyText">Med iSpect ser vi till att fel kan förebyggas och
+                att uppkomna fel kan åtgärdas direkt!</p>
+              <span class="common-Link"><a href="../../../ispect/">Läs mer om iSpect</a></span>
+            </li>
+            <li class="col-8-12">
+              <img src="../../../assets/svg/bm_se_checkmark_color.svg" alt=""
+                style="width:130px;margin-left: 80px;margin-bottom: 10px;margin-top: 16px;">
+              <h3 class="common-BodyTitle">Ett opartiskt besiktningsföretag</h3>
+              <p class="fix-4-12 common-BodyText">Vi utför besiktnings- och KA- tjänster objektivt och
+                opartiskt enligt gällande bygg- och branschregler.</p>
+              <span class="common-Link"><a href="../../../om_oss/">Läs mer om oss</a> </span>
+            </li>
+          </ul>
+          <h3>Redo att boka?</h3>
+          <p>Fyll i formuläret så kontaktar vi dig.</p>
+          <a class="common-Button blue text-white" href="#boka">Kontakta mig </a>
+        </div>
+      </div>
+    </div>
+  </section>
 	<section class="slide whiteSlide margin-top-1" id="footer-nav">
 		<div class="container-lg padding-5 center">
 			<h3 class="center">Söker ni en annan besiktningstyp till er BRF?</h3>
