Ändrade på en särskrivning i OVK texten.

--- a/tjanster/brf/OVK_besiktning/index.html
+++ b/tjanster/brf/OVK_besiktning/index.html
@@ -348,7 +348,7 @@
 										<br>
 										Kontroller ska utföras både innan och efter ventilationen tagits i bruk
 										<br><br>
-										Du som inneboende kan också säkerställa att OVK besiktning utförs - genom att påminna fastighetsägaren om OVK intervallerna!
+										Du kan också säkerställa att OVK besiktning utförs - genom att påminna fastighetsägaren om OVK intervallerna!
 									</p>
 								<li class="col-6-12 bottom">
 									<img src="../../../assets/img/backgrounds/managersmiling.jpg"
