Fixed misspelling in meta-tags

--- a/tjanster/brf/OVK_besiktning/index.html
+++ b/tjanster/brf/OVK_besiktning/index.html
@@ -18,14 +18,14 @@
 	<meta property="og:title"
 		content="OVK - För ett bra inomhusklimat." />
 	<meta property="og:description"
-		content="Beställ en OVK besiktning för att kontroller ventilationen" />
-	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/ovk" />
+		content="Beställ en OVK besiktning för att kontrollera ventilationen." />
+	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/ovk_besiktning" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:title"
-		content="Beställ en OVK besiktning för att kontroller ventilationen" />
+		content="Beställ en OVK besiktning för att kontrollera ventilationen." />
 	<meta name="twitter:description"
-		content="Beställ en OVK besiktning för att kontroller ventilationen" />
+		content="Beställ en OVK besiktning för att kontrollera ventilationen." />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link
